# rag-based-aibot-for-database-procedure-application-flows

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  REQUIREMENTS.md  app.py  docker-compose.yml  list_models.py  pyproject.toml  requirements.txt  run.sh  test_schema.py
.streamlit/: config.toml
backend/: Dockerfile  requirements.txt  sample_db.sql
backend/src/: database.py  main.py  rag.py  seeder.py  vector_store.py
frontend/: Dockerfile  index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: CustomModal.jsx  Navbar.jsx  Sidebar.jsx
frontend/src/layouts/: DashboardLayout.jsx
frontend/src/pages/: DashboardPage.jsx  ExplorerPage.jsx  IngestionPage.jsx  LoginPage.jsx  SettingsPage.jsx
src/: database.py  main.py  rag.py  vector_store.py
